--- a/style.css
+++ b/style.css
@@ -24,11 +24,16 @@ a:hover {
 
 .nav-left-side {
   letter-spacing: 1.5px;
+  margin-left: 15px;
 }
 
+.nav-right-side {
+  letter-spacing: 1.5px;
+  margin-right: 15px;
+}
 .icon-menu {
-  width: 18px;
-  height: 18px;
+  width: 25px;
+  height: 25px;
 }
 
 .sign-in-btn {
