--- a/style.css
+++ b/style.css
@@ -62,37 +62,37 @@ section {
 }
 
 .search-area {
+  box-sizing: border-box;
+  width: 600px;
+  height: 44px;
+  border: 1px solid lightgray;
+  border-radius: 30px;
+  margin: 10px 50%;
+  transform: translate(-50%, -50%);
   position: relative;
 }
 .search {
-  border: 1px solid grey;
-  border-radius: 30px;
-  padding: 5px;
-  margin: 20px auto;
-  z-index: -1;
-  width: 100%;
+  font-size: 16px;
+  height: 30px;
+  width: 500px;
+  border: none;
+  position: relative;
+  top: 6px;
 }
 
 .search:focus {
   outline: none;
 }
-
-.microphone {
-  width: 18px;
-  height: 18px;
-  margin-right: 8px;
+.mag {
   position: absolute;
-  top: 25px;
-  right: 5px;
+  top: 13px;
+  left: 20px;
 }
 
-#search-icon {
-  position: absolute;
-  margin-left: 8px;
-  border-radius: 10px;
-  opacity: 0.5;
-  top: 26px;
-  left: 5px;
+.mic {
+  position: relative;
+  top: 7px;
+  right: -20px;
 }
 
 button {
